implement lyric list and selection
added ability to select lyrics and separate component to its own file

--- a/Beacon/wwwroot/index.html
+++ b/Beacon/wwwroot/index.html
@@ -64,6 +64,14 @@
                 behavior: "smooth"
             });
         }
+        
+        function ScrollToView(containerId, itemId) {
+            document.getElementById(itemId).scrollIntoView({
+                behavior: "smooth",
+                block: "center"
+            });
+        }
+
 
     </script>
 </body>
